# Floresta

./: Cargo.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
crates/floresta-chain/: Cargo.toml
crates/floresta-chain/src/: extensions.rs  lib.rs
crates/floresta-chain/src/pruned_utreexo/: chain_state.rs  chainparams.rs  chainstore.rs  flat_chain_store.rs  mod.rs  partial_chain.rs
crates/floresta-common/: Cargo.toml
crates/floresta-common/src/: lib.rs
crates/floresta-node/src/: florestad.rs
crates/floresta-node/src/json_rpc/: blockchain.rs  network.rs  res.rs  server.rs
crates/floresta-rpc/: Cargo.toml
crates/floresta-rpc/src/: lib.rs  rpc.rs  rpc_types.rs
crates/floresta-watch-only/src/descriptor/: mod.rs
crates/floresta-wire/src/p2p_wire/: bitcoin_socket_addr.rs  network_message_ext.rs  node_interface.rs
crates/floresta-wire/src/p2p_wire/node/: chain_selector_ctx.rs  conn.rs  mod.rs  peer_man.rs  running_ctx.rs
crates/floresta-wire/src/p2p_wire/tests/: mod.rs  utils.rs
doc/rpc/: getblockchaininfo.md  getchaintips.md  getmemoryinfo.md  getpeerinfo.md  getrpcinfo.md  listdescriptors.md
tests/example/: functional.py
tests/floresta-cli/: getblock.py  getblockchaininfo.py  getblockheader.py  getchaintips.py  getpeerinfo.py  gettxout.py
tests/florestad/: node_info.py  reorg_chain.py
tests/p2p/: p2p_dynamic_tips.py
tests/test_framework/: constants.py  service_flags.py  util.py
tests/test_framework/rpc/: base.py
