[workspace]
resolver = "2"
members = [
    # Libraries
    "crates/floresta",
    "crates/floresta-node",
    "crates/floresta-chain",
    "crates/floresta-rpc",
    "crates/floresta-common",
    "crates/floresta-compact-filters",
    "crates/floresta-electrum",
    "crates/floresta-watch-only",
    "crates/floresta-wire",
    "crates/floresta-mempool",
    "crates/floresta-domain",

    # Binaries
    "bin/florestad",
    "bin/floresta-cli",

    # Tests and monitoring
    "metrics",
    "fuzz",
]

default-members = [
    "crates/floresta",
    "crates/floresta-node",
    "crates/floresta-chain",
    "crates/floresta-rpc",
    "crates/floresta-common",
    "crates/floresta-compact-filters",
    "crates/floresta-electrum",
    "crates/floresta-watch-only",
    "crates/floresta-wire",
    "crates/floresta-mempool",
    "crates/floresta-domain",
    "bin/florestad",
    "bin/floresta-cli",
]

[workspace.package]
rust-version = "1.85.0" # MSRV
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
# All dependencies MUST be pinned precisely with `X.Y.z`
axum = { version = "=0.8.9", default-features = false, features = ["http1", "json", "tracing", "tokio"] }
bitcoin = { version = "=0.32.8", default-features = false }
clap = { version = "=4.6.1", default-features = false, features = ["derive", "std", "error-context"] }
corepc-types = { version = "=0.14.0" }
console-subscriber = { version = "=0.5.0", default-features = false }
dns-lookup = { version = "=2.1.1" }
hex = { version = "=0.4.3" }
kv = { version = "=0.24.0" }
miniscript = { version = "=12.3.6", default-features = false }
rand = { version = "=0.10.1" }
rcgen = { version = "=0.14.7", default-features = false, features = ["aws_lc_rs", "pem"] }
rustreexo = { version = "=0.5.0" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150" }
sha2 = { version = "=0.10.9", default-features = false }
spin = { version = "=0.10.0", default-features = false, features = ["spin_mutex", "rwlock"] }
tempfile = { version = "=3.27.0" }
tokio = { version = "=1.52.3", features = ["net", "time", "rt-multi-thread", "signal", "macros"] }
tokio-rustls = { version = "=0.26.4", default-features = false, features = ["ring", "tls12"] }
toml = { version = "=1.1.2", default-features = false, features = ["std", "parse", "serde"] }
tracing = { version = "=0.1.44", default-features = false }
zstd = { version = "=0.13.3" }
# Pins for MSRV compatibility:
time = { version = "=0.3.45" } # note: >0.3.45 requires Rust 1.88.0
tonic = { version = "=0.14.5" } # note: >0.14.5 requires Rust 1.88.0
tonic-prost = { version = "=0.14.5" } # note: >0.14.5 requires Rust 1.88.0

# Local dependencies
floresta-chain = { path = "crates/floresta-chain" }
floresta-common = { path = "crates/floresta-common" }
floresta-compact-filters = { path = "crates/floresta-compact-filters" }
floresta-electrum = { path = "crates/floresta-electrum" }
floresta-node = { path = "crates/floresta-node", default-features = false }
floresta-rpc = { path = "crates/floresta-rpc" }
floresta-watch-only = { path = "crates/floresta-watch-only" }
floresta-wire = { path = "crates/floresta-wire" }
floresta-mempool = { path = "crates/floresta-mempool" }
floresta-domain = { path = "crates/floresta-domain" }
metrics = { path = "metrics" }

[workspace.lints.clippy]
unused_async = "deny"
use_self = "deny"

[profile.release]
opt-level = 3     # maximum optimization level
strip = true      # strip symbol tables and metadata
lto = true        # enable link-time optimizations
codegen-units = 1 # compile a single codegen unit
