[package]
name = "floresta-common"
version = "0.5.0"
rust-version.workspace = true
edition.workspace = true
description = "Common types and functions for Floresta"
authors = ["Floresta Developers <contact@getfloresta.org>"]
license.workspace = true
repository = "https://github.com/getfloresta/Floresta"
readme.workspace = true # Floresta/README.md

[dependencies]
# All dependencies MUST be pinned precisely with `X.Y.z`
bitcoin = { workspace = true }
hashbrown = { version = "=0.17.1" }
sha2 = { workspace = true }
spin = { workspace = true }
tracing = { workspace = true }

[features]
default = ["std"]
std = ["bitcoin/std", "sha2/std"]

[lints]
workspace = true
