[package]
name = "floresta-rpc"
version = "0.5.0"
rust-version.workspace = true
edition.workspace = true
authors = ["Floresta Developers <contact@getfloresta.org>"]
license.workspace = true
description = """
floresta-rpc is a Rust library that provides a JSON-RPC interface for interacting with Floresta. It allows
users to perform various operations such as querying blockchain data, managing wallets, and
broadcasting transactions through a simple and efficient API.
"""
repository = "https://github.com/getfloresta/Floresta"
readme.workspace = true # Floresta/README.md
keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[dependencies]
# All dependencies MUST be pinned precisely with `X.Y.z`
bitcoin = { workspace = true }
clap = { workspace = true, optional = true }
corepc-types = { workspace = true }
jsonrpc = { version = "=0.20.0", features = ["bitreq_http"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rcgen = { workspace = true }

[features]
default = ["with-jsonrpc"]
with-jsonrpc = ["dep:jsonrpc"]
clap = ["dep:clap"]

[lints]
workspace = true
